All tests are passing

--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,18 @@
 <html>
   <head>
-    <title>FCC ISQA Project - Personal Library</title>
-    <meta name="description" content="A cool thing made with HyperDev">
-    <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
+    <title>Personal Library - Jasna Misimovic</title>
+    <meta name="description" content="A project for freeCodeCamp's Information Security and Quality Assurance certification">
+    <link rel="shortcut icon" href="favicon.ico"> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
     <header>
       <h1>
-        <b>ISQA Project</b> - Personal Library
+        Personal Library
       </h1>
     </header>
     <br>
@@ -64,7 +65,14 @@
       </div>
       <button id='deleteAllBooks'>Delete all books...</button>
     </div>
-    <hr style='margin: 50px'>
+    <hr style='margin: 10px'>
+    <footer>
+      <a href="http://jasnamisimovic.me" target="_blank">
+        <img src="/public/img/logo.jpg" width="50">
+        <h5>jasnamisimovic.me</h5>
+      </a>
+      <h6>Technologies: Node, Express, Helmet, MongoDB, Mongoose, Chai, Mocha, HTML, CSS</h6>
+    </footer> 
 
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
