--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+h1 {
+  text-align: center;
+}
+
 .border {
   border-style: inset;
   border-width: 1px;
@@ -22,4 +26,8 @@
 
 form {
   padding: 5px;
+}
+
+footer {
+  text-align: center;
 }
